# swagger-output.json
@@ -285,6 +285,13 @@
           "example": "Detailed error information"
         }
       }
-    }
+    },
+    "securityDefinitions": {
+  "bearerAuth": {
+    "type": "apiKey",
+    "name": "Authorization",
+    "in": "header"
+  }
+}
   }
 }
